--- a/Loan2.html
+++ b/Loan2.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loan Payment Schedule</title>
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="index.js"></script>
+    <script src="loan2.js"> </script>
     <style>
         body {
             background: linear-gradient(to right, #6dd5ed, #2193b0);
             font-family: 'Poppins', sans-serif;
+        }
+
+        .table>:not(caption)>*>* {
+            background-color: transparent;
         }
 
         .container {
@@ -124,10 +128,6 @@
                 font-size: 14px;
             }
         }
-
-        .table>:not(caption)>*>* {
-            background-color: transparent;
-        }
     </style>
 </head>
 
@@ -137,10 +137,9 @@
         <p class="fw-bold">
             Price:
             <script>document.write(price);</script> | Duration:
-            <script>document.write(months);</script> months
+            <script>document.write(duration);</script> months
         </p>
-
-        <table class="table text-center bg-transparent">
+        <table class="table text-center">
             <thead>
                 <tr>
                     <th>No</th>
@@ -153,33 +152,52 @@
             <tbody>
                 <script>
                     let totalPayment = 0;
-                    for (let i = 1; i <= months; i++) {
-                        let monthly_interest = remainingBalance * interestRate;
-                        let totalPayment = principal + monthly_interest;
-                        totalInterest += monthly_interest;
-                        remainingBalance -= principal;
-                        let paymentDay = i;
-                        if (i % 2) {
+                    for (let month = 1; month <= duration; month++) {
+                        let paymentDay = month;
+                        let principalPayment = price / duration; // Base principal payment
+
+                        // Increase principal payment by 3 times if it's a 3rd month
+                        if (month % 3 === 0) {
+                            principalPayment = principalPayment * 3;
+                        }
+                        // redue prciple to calculate interest
+                        let interestPaid = (price - pricePaid) * interestRate;
+                        let principalPaid = 0;
+
+                        // Pay principal dynamically every 3rd month or the last month
+                        if (month % 3 === 0 || month === duration) {
+                            if (pricePaid + principalPayment <= price) {
+                                principalPaid = principalPayment; // Pay the calculated principal
+                            } else {
+                                principalPaid = price - pricePaid; // Pay the remaining principal in last month
+                            }
+                        }
+
+                        pricePaid += principalPaid;
+                        totalAmountPaid += principalPaid + interestPaid;
+                        if (month % 2) {
                             document.write(` 
-                                <tr class="bgsky text-white">
-                                    <td>${i}</td>
-                                    <td colspan="2">${principal}</td>
-                                    <td>$${monthly_interest.toFixed(2)}</td>
-                                    <td>$${totalPayment.toFixed(2)}</td>
-                                    <td>06/${i < 10 ? "0" + paymentDay : i}/2025</td>
-                                </tr>`
+                                    <tr class="bgsky">
+                                        <td>${month}</td>
+                                        <td colspan="2">${principalPaid}</td>
+                                        <td>$${interestPaid.toFixed(2)}</td>
+                                        <td>$${(principalPaid + interestPaid).toFixed(2)}</td>
+                                        <td>06/${month < 10 ? "0" + paymentDay : month}/2025</td>
+                                    </tr>`
                             );
                         } else {
                             document.write(` 
-                                <tr class="bg-primary">
-                                    <td>${i}</td>
-                                    <td colspan="2">${principal}</td>
-                                    <td>$${monthly_interest.toFixed(2)}</td>
-                                    <td>$${totalPayment.toFixed(2)}</td>
-                                    <td>06/${i < months ? "0" + paymentDay : i}/2025</td>
-                                </tr>`
+                                    <tr class="bg-primary">
+                                        <td>${month}</td>
+                                        <td colspan="2">${principalPaid}</td>
+                                        <td>$${interestPaid.toFixed(2)}</td>
+                                        <td>$${(principalPaid + interestPaid).toFixed(2)}</td>
+                                        <td>06/${month < 10 ? "0" + paymentDay : month}/2025</td>
+                                    </tr>`
                             );
                         }
+                        TotalInteerst += interestPaid;
+                        if (pricePaid >= price) break;
                     }
                 </script>
             </tbody>
@@ -187,10 +205,10 @@
                 <tr>
                     <td colspan="3"></td> <!-- Empty space for alignment -->
                     <td class="highlight-total">Total Interest:
-                        <script>document.write(`$${totalInterest.toFixed(2)}`);</script>
+                        <script>document.write(`$${TotalInteerst.toFixed(2)}`);</script>
                     </td>
                     <td class="highlight-amount">Total:
-                        <script>document.write(`$${(price + totalInterest).toFixed(2)}`);</script>
+                        <script>document.write(`$${(totalAmountPaid).toFixed(2)}`);</script>
                     </td>
                     <td></td>
                 </tr>
@@ -198,9 +216,10 @@
         </table>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
+    <body>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    </body>
 
 </html>
