--- a/Loan2.html
+++ b/Loan2.html
@@ -14,6 +14,10 @@
             font-family: 'Poppins', sans-serif;
         }
 
+        .table>:not(caption)>*>th {
+            color: white;
+        }
+
         .table>:not(caption)>*>* {
             background-color: transparent;
         }
@@ -50,7 +54,7 @@
         }
 
         th {
-            background: linear-gradient(to right, #007bff, #0056b3);
+            background: linear-gradient(to right, #60a0e6, #3f6792);
             color: white;
             padding: 15px;
             text-transform: uppercase;
