--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
             font-family: 'Poppins', sans-serif;
         }
 
+        /* 
+        .table>:not(caption)>*>*th {
+            color: white;
+        } */
+
+        .table>:not(caption)>*>* {
+            background-color: transparent;
+            color: none;
+        }
+
+
+
         .container {
             background: white;
             padding: 20px;
@@ -46,7 +58,7 @@
         }
 
         th {
-            background: linear-gradient(to right, #007bff, #0056b3);
+            background: linear-gradient(to right, #60a0e6, #3f6792);
             color: white;
             padding: 15px;
             text-transform: uppercase;
@@ -123,10 +135,6 @@
                 padding: 10px;
                 font-size: 14px;
             }
-        }
-
-        .table>:not(caption)>*>* {
-            background-color: transparent;
         }
     </style>
 </head>
