--- a/Loan2.html
+++ b/Loan2.html
@@ -18,6 +18,16 @@
             color: white;
         }
 
+        .table>:not(caption)>*>.highlight-total {
+            color: white;
+
+        }
+
+
+        .table>:not(caption)>*>.highlight-amount {
+            color: white;
+        }
+
         .table>:not(caption)>*>* {
             background-color: transparent;
         }
