--- a/Loan2.html
+++ b/Loan2.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <script src="loan2.js"> </script>
     <style>
         body {
@@ -148,10 +149,14 @@
 <body>
     <div class="container">
         <h3>Loan Payment Schedule</h3>
+        <br>
         <p class="fw-bold">
+            Date:
+            <script>document.write(`06/01/2025`);</script>|
             Price:
             <script>document.write(price);</script> | Duration:
-            <script>document.write(duration);</script> months
+            <script>document.write(months);</script> months | InterestRate
+            <script>document.write(interestRate);</script>
         </p>
         <table class="table text-center">
             <thead>
@@ -166,8 +171,10 @@
             <tbody>
                 <script>
                     let totalPayment = 0;
+
+
                     for (let month = 1; month <= duration; month++) {
-                        let paymentDay = month;
+                        let paymentDay = month + 1;
                         let principalPayment = price / duration; // Base principal payment
 
                         // Increase principal payment by 3 times if it's a 3rd month
@@ -196,7 +203,8 @@
                                         <td colspan="2">${principalPaid}</td>
                                         <td>$${interestPaid.toFixed(2)}</td>
                                         <td>$${(principalPaid + interestPaid).toFixed(2)}</td>
-                                        <td>06/${month < 10 ? "0" + paymentDay : month}/2025</td>
+                                       <td>06/${paymentDay < 10 ? "0" + paymentDay : paymentDay}/2025</td>
+
                                     </tr>`
                             );
                         } else {
@@ -206,12 +214,13 @@
                                         <td colspan="2">${principalPaid}</td>
                                         <td>$${interestPaid.toFixed(2)}</td>
                                         <td>$${(principalPaid + interestPaid).toFixed(2)}</td>
-                                        <td>06/${month < 10 ? "0" + paymentDay : month}/2025</td>
+                                       <td>06/${paymentDay < 10 ? "0" + paymentDay : paymentDay}/2025</td>
+
                                     </tr>`
                             );
                         }
                         TotalInteerst += interestPaid;
-                        if (pricePaid >= price) break;
+                        // if (pricePaid >= price) break;
                     }
                 </script>
             </tbody>
